Reader: Fix Like button alignment (#19171)

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -319,6 +319,10 @@
 	}
 }
 
+.reader-full-post .like-button .gridicon {
+	top: 4px;
+}
+
 .reader-full-post__sidebar .like-button {
 
 	@include breakpoint( "<660px" ) {
